2007-08-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.6 released.

2007-07-31  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: doc/Mudoles/kahua.user.ja, doc/Modules/kahua.server.ja
	  Add description of kahua-user?(kahua.user), with-kahua-user and
	  with-kahua-local-user(kahua.server).

2007-07-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: DIST
	  Add .svn directory to be excluded when ./DIST tgz, because
	  source repository moved from CVS to Subversion.

2007-07-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Now kahua-self-uri and kahua-self-uri-full always return a URI(path)
	  string which ends by #\/ if they have no arguments, and they
	  always return a URI(path) which doesn't end by #\/ if they have
	  one or more arguments.

2007-07-18  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: configure.ac, src/Makefile.in
	  Fix the problem that BSD make couldn't substitute version string
	  properly.

2007-07-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/server.scm
	  Add with-kahua-user/with-kahua-local-user.

	* Change: src/kahua/user.scm, test/user.scm
	  Add kahua-user? that check obj is a instance (kahua-current-user-class).

	* Change: src/kahua/server.scm
	  Now run-eval is invoked with context that has only session-state.
	  So we can easily simulate login session in kahua-shell.

2007-07-03  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: configurea.ac, cgi/Makefile.in
	  Add configure option --with-fastcgi-ext to specify extension of
	  FastCGI script.  Its default value is fcg yet.

2007-07-01  Tatsuya BIZENN  <bizenn@arthub.net>

	* 1.0.5 released.

2007-06-29  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: examples/lambdabooks.init, examples/foldlist/foldlist.kahua,
	          examples/lambdabooks/book.kahua, examples/lambdabooks/lambdabooks.kahua,
	          examples/lambdabooks/lister.kahua, examples/lambdabooks/login.kahua,